# novatel_span_driver

./: README.md
.circleci/: config.yml
novatel_diagnostics/: CMakeLists.txt  package.xml
novatel_generated_msgs/: package.xml
novatel_generated_msgs/msg/: AllMsgs.msg
novatel_launch/: CMakeLists.txt  example.launch
novatel_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
novatel_msgs/msg/: BESTPOSB.msg  BESTXYZ.msg  CORRIMUDATA.msg  CommonHeader.msg  INSCOV.msg  INSPVAX.msg  RAWIMU.msg  WHEELVELOCITY.msg
novatel_msgs/src/: mapping.py
novatel_params/: package.xml
novatel_params/src/: params.py
novatel_publisher/: CMakeLists.txt  package.xml
novatel_publisher/src/: gps_utm.py  publisher.py
novatel_span_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
novatel_span_driver/launch/: example.launch  example_serial.launch  span_cpt.launch
novatel_span_driver/scripts/: driver
novatel_span_driver/src/novatel_span_driver/: bridge.py  control.py  data.py  diagnostics.py  handlers.py  mapping.py  port.py  publisher.py  translator.py  wheel_velocity.py
novatel_span_driver/test/: propak6-basic-fix.test  propak6-ins-ppp.test  propak6-sbas-fix.test  propak6-span-fix.test  propak6.test
novatelcentral/: CMakeLists.txt  package.xml
novatelcentral/launch/: example.launch
novatelcentral/src/: bridge.py  data.py  port.py
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/novatel_diagnostics/: Makefile  cmake_install.cmake
src/novatel_diagnostics/src/: diagnostics_publisher.py
src/novatel_generated_msgs/: CMakeLists.txt  Makefile  cmake_install.cmake
src/novatel_generated_msgs/src/: generate.py
src/novatel_launch/: Makefile  cmake_install.cmake  example.launch  package.xml
src/novatel_msgs/: CMakeLists.txt  Makefile  cmake_install.cmake  package.xml
src/novatel_msgs/msg/: BESTPOSB.msg  BESTVEL2.msg  Groups.msg  INSPVA.msg  INSPVAX.msg
src/novatel_msgs/src/: mapping.py
src/novatel_params/: CMakeLists.txt  Makefile  cmake_install.cmake
src/novatel_params/src/: params.py
src/novatel_publisher/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/novatel_publisher/src/: gps_utm.py  publisher.py
src/novatel_test/: CMakeLists.txt  manifest.xml
src/novatel_test/nodes/: basic_data_smoke.py
src/novatel_test/test/: basic_data_smoke.test
src/novatelcentral/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/novatelcentral/src/: bridge.py  control.py  data.py  handlers.py  imuspecs.py  monitor.py  port.py  translator.py
