<?xml version="1.0"?>
<package>
  <name>novatel_span_driver</name>
  <version>0.1.0</version>
  <description>Python driver for NovAtel SPAN devices.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <author email="support@novatel.com">NovAtel Support</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>novatel_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
