<?xml version="1.0"?>
<package>
  <name>novatel_launch</name>
  <version>0.0.0</version>
  <description>The novatel_launch package</description>

  <maintainer email="support@novatel.com">NovAtel Support</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/novatel_diagnostics</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>novatelcentral</build_depend>
  <build_depend>novatel_params</build_depend>
  <run_depend>novatelcentral</run_depend>
  <run_depend>novatel_params</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
